--- a/ansatte.html
+++ b/ansatte.html
@@ -27,10 +27,10 @@
         </div>
         <div class="responsive3">
             <div class="gallery">
-              <a target="_blank" href="bilder\fillip.png">
-                <img src="bilder\fillip.png" alt="Cinque Terre" width="200" height="100">
+              <a target="_blank" href="bilder\uwu.png">
+                <img src="bilder\uwu.png" alt="Cinque Terre" width="200" height="100">
               </a>
-              <div class="desc">Fillip Drust<br>Nestsjef</div>
+              <div class="desc">Empty<br>Nestsjef</div>
             </div>
         </div>
         <div class="responsive3">
@@ -62,7 +62,7 @@
               <a target="_blank" href="bilder\uwu.png">
                 <img src="bilder\uwu.png" alt="Cinque Terre" width="200" height="100">
               </a>
-              <div class="desc">Empty<br>Empty</div>
+              <div class="desc">Stian Pedersen<br>Lærling</div>
             </div>
         </div>
         <div class="responsive5">
@@ -70,7 +70,7 @@
               <a target="_blank" href="bilder\uwu.png">
                 <img src="bilder\uwu.png" alt="Cinque Terre" width="200" height="100">
               </a>
-              <div class="desc">Empty<br>Empty</div>
+              <div class="desc">Tom Ørsland<br>Lærling</div>
             </div>
         </div>
         <div class="responsive5">
