--- a/velg.html
+++ b/velg.html
@@ -17,7 +17,7 @@
         <div class="backbutton" id="myButtons">
             <button onclick="window.location.href = 'index.html'" class="button2">⇦ Tilbake</button>
         </div>
-        <p style="font-size: large;">Velg Ditt Yrke</p>
+        <p style="font-size: large;">Velg Hva Du Jobber Som</p>
         <p>(Vær Ærlig)</p>
         <div class="buttons" id="myButtons">
             <button onclick="window.location.href = 'pmeny.html'" class="buttonvelg">Politi</button>
