--- a/ansatte.html
+++ b/ansatte.html
@@ -30,7 +30,7 @@
               <a target="_blank" href="bilder\uwu.png">
                 <img src="bilder\uwu.png" alt="Cinque Terre" width="200" height="100">
               </a>
-              <div class="desc">Empty<br>Nestsjef</div>
+              <div class="desc">Truls Aune Bakke<br>Nestsjef</div>
             </div>
         </div>
         <div class="responsive3">
@@ -52,9 +52,9 @@
         <div class="responsive4">
             <div class="gallery">
               <a target="_blank" href="bilder\jons.png">
-                <img src="bilder\jons.png" alt="Cinque Terre" width="200" height="100">
+                <img src="bilder\uwu.png" alt="Cinque Terre" width="200" height="100">
               </a>
-              <div class="desc">Jonas Guzman<br>Lærling</div>
+              <div class="desc">Empty<br>Lærling</div>
             </div>
         </div>
         <div class="responsive4">
@@ -62,7 +62,7 @@
               <a target="_blank" href="bilder\uwu.png">
                 <img src="bilder\uwu.png" alt="Cinque Terre" width="200" height="100">
               </a>
-              <div class="desc">Stian Pedersen<br>Lærling</div>
+              <div class="desc">Empty<br>Lærling</div>
             </div>
         </div>
         <div class="responsive5">
@@ -70,7 +70,7 @@
               <a target="_blank" href="bilder\uwu.png">
                 <img src="bilder\uwu.png" alt="Cinque Terre" width="200" height="100">
               </a>
-              <div class="desc">Tom Ørsland<br>Lærling</div>
+              <div class="desc">Empty<br>Lærling</div>
             </div>
         </div>
         <div class="responsive5">
