--- a/ansatte.html
+++ b/ansatte.html
@@ -46,7 +46,7 @@
               <a target="_blank" href="bilder\uwu.png">
                 <img src="bilder\uwu.png" alt="Cinque Terre" width="200" height="100">
               </a>
-              <div class="desc">Marcus Rikkardson<br>Kokk</div>
+              <div class="desc">Empty<br>Kokk</div>
             </div>
         </div>
         <div class="responsive4">
