--- a/saaknad.html
+++ b/saaknad.html
@@ -22,8 +22,10 @@
         <div class="søknad_header">
             <p>JOBBSØKNAD WIP</p>
         </div>
-    
-    
+        <div>
+               <a href="https://docs.google.com/forms/d/e/1FAIpQLSdBXtpAocDo-lqfcWOwO1rESWKgyVOkrSFZYnMBuI4mBKuELw/viewform?usp=sf_link" target="_blank"
+               <img scr="uwu.png">
+            </a>
     </body>
 
 
