--- a/saaknad.html
+++ b/saaknad.html
@@ -24,7 +24,7 @@
         </div>
         <div>
                <a href="https://docs.google.com/forms/d/e/1FAIpQLSdBXtpAocDo-lqfcWOwO1rESWKgyVOkrSFZYnMBuI4mBKuELw/viewform?usp=sf_link" target="_blank"
-               <img scr="uwu.png">
+               <img scr="uwu3.png">
             </a>
     </body>
 
