--- a/ansatte.html
+++ b/ansatte.html
@@ -46,7 +46,7 @@
               <a target="_blank" href="bilder\uwu.png">
                 <img src="bilder\uwu.png" alt="Cinque Terre" width="200" height="100">
               </a>
-              <div class="desc">Empty<br>Kokk</div>
+              <div class="desc">Max Markusen<br>Kokk</div>
             </div>
         </div>
         <div class="responsive4">
@@ -54,7 +54,7 @@
               <a target="_blank" href="bilder\jons.png">
                 <img src="bilder\uwu.png" alt="Cinque Terre" width="200" height="100">
               </a>
-              <div class="desc">Empty<br>Lærling</div>
+              <div class="desc">Marcus Rikkardson<br>Lærling</div>
             </div>
         </div>
         <div class="responsive4">
@@ -62,7 +62,7 @@
               <a target="_blank" href="bilder\uwu.png">
                 <img src="bilder\uwu.png" alt="Cinque Terre" width="200" height="100">
               </a>
-              <div class="desc">Empty<br>Lærling</div>
+              <div class="desc">Markus Markussen<br>Lærling</div>
             </div>
         </div>
         <div class="responsive5">
