--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
         <p style="font-size: large;">TigerStadenRP UwU Cafè</p>
         <p>Vi er en bedrift som selger god mat</p>
         <div class="buttons" id="myButtons">
-            <button onclick="window.location.href = 'meny.html'" class="button">Menyer</button>
+            <button onclick="window.location.href = 'velg.html'" class="button">Menyer</button>
             <button onclick="window.location.href = 'bestill.html'" class="button">Bestillinger</button>
             <button onclick="window.location.href = 'ansatte.html'" class="button">Ansatte</button>
             <button onclick="window.location.href = 'saaknad.html'" class="button">Søknad</button>
